--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,10 @@ env:
 
 python:
   - 3.6
+
 install:
-  - ./03.sh
+  - set -e
+  - git clone https://github.com/regro/cf-scripts.git
+script:
+  - cd cf-scripts
+  - ./00.sh
